--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
                 </div>
                 <ul>
                     <li class="active"><a href="#">Home</a></li>
-                    <li><a href="#">About</a></li>
+                    <li><a href="./about.html">About</a></li>
                     <li><a href="#">Projects</a></li>
                     <li><a href="#">Services</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="./CONTACT.html">Contact</a></li>
                 </ul>
             </div>
             <div class="title">
